# dog-poop-detector-yolov5

./: .gitignore  README.md  config.json  crop-downsample-images.ipynb  crop-resize-image.py  dataset.yaml  detector.py  install.bat  install.ps1  install.sh  label-images.ps1  live-crate.py  live-no-notify.bat  live-no-sound.bat  live.py  logging.ini  pyproject.toml  requirements-all.txt  requirements-labelimg.txt  requirements.txt  start-label-images.ps1  test-image.ps1  test-rtsp.ps1  test-video.ps1  train-detector.ipynb  train-dog-poop-detector.ipynb  train-poop-detector.ipynb  train.py
dataset/labels/: classes.txt  dog-1685519978198.txt  dog-1685521457510.txt  dog-1685522147028.txt  dog-1686240943020.txt  dog-1686318520020.txt  dog-1686399844581.txt  dog-1686525308726.txt  dog-1686620232047.txt  dog-1686661444850.txt  dog-1686671723320.txt  dog-1686707683624.txt  dog-1686830238700.txt  dog-1687047268472.txt  dog-1689003945630.txt  dog-1710400479626.txt  dog-1710454817468.txt  dog-1710752554430.txt  dog-ball-vlcsnap-2023-06-02-09h32m19s693.txt  dog-ball-vlcsnap-2023-06-02-09h32m51s673.txt  dog-fp-1686705059330.txt  dog-fp-1686709158636.txt  dog-fp-1687047650902.txt  dog-fp-1687651489306.txt  dog-fp-1687651641475.txt  dog-fp-1688427670171.txt  dog-fp-1688461347130.txt  dog-fp-1688521733985.txt  dog-fp-1688813269695.txt  dog-fp-1689038154392.txt  dog-fp-1689038185775.txt  dog-fp-1689149713202.txt  dog-fp-1689160338479.txt  dog-fp-1690296093734.txt  dog-fp-1693119565423.txt  dog-fp-1693878443950.txt  dog-fp-1694484088922.txt  (+45 more)
utils/: pushbullet.py  sound.py  value.py
