[tool.poetry]
name = "dog-poop-detector-yolov5"
version = "1.0.0"
description = "Dog Poop Detector using YOLOv5"
authors = ["Dennis Lee <wylee2000@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pushbullet-py = "^0.12.0"
yolov5 = "^7.0.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
